--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -1,12 +1,19 @@
 @import '../../assets/css/var.scss';
 .navbar{
+    background: $menubar;
+    display: flex;
     width: 100%;
+    margin-bottom: 20px;
     .container{
         display: flex;
         align-items: center;
         .row {
+            margin: 0;
             .col-3{
                 background: $dark-blue;
+                position: relative !important;
+                margin: 0;
+                padding: 0;
                 .menubar{
                     padding: 14px 20px;
                     display: flex;
@@ -15,18 +22,64 @@
                     img{
                         margin-right: 10px;
                     }
+                    cursor: pointer;
+                }
+                .nav__list{
+                    display: none;
+                    flex-direction: column;
+                    left: 0;
+                    top: 100%;
+                    width: 100%;
+                    position: absolute;
+                    background: #EDF2F6;
+                    transition: .4s;
+                   li{
+                        display: flex;
+                        align-items: center;
+                        .nav__items{
+                            height: 100%;
+                            padding: 8px;
+                            display: flex;
+                            align-items: center;
+                            img{
+                                padding: 0 18px;
+                            }
+                            span{
+                                font-size: 16px;
+                                font-weight: 500;
+                            }
+                        }
+                        &:hover{
+                            background-color: #DAE4ED;
+                            cursor: pointer;
+                        }
+                    }
+
+                }
+                .nav__list.show{
+                    display:flex;
                 }
             }
             .col-9{
                 background: $menubar;
+                width: 100%;
                 ul{
-                    padding: 21.5px 24px;
+                    padding: 0 24px;
                     width: 100%;
                     height: 100%;
                     li{
                         display: flex;
+                        height: 100%;
                         align-items: center;
                         margin-right: 40px;
+                        cursor: pointer;
+                        transition:all linear .2s;
+                        &:hover{
+                            border-bottom: 3px solid $dark-blue;
+                            a{
+                                color: $dark-blue;
+                            }
+                        }
                         a{
                             font-size: 16px;
                             line-height: 16px;
