--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -100,6 +100,11 @@
     }
 }
 
+@media (max-width:954px) {
+    .navbar{
+        display: none !important;
+    }
+}
 @media (max-width:768px) {
     .navbar{
         display: none !important;
